Add font 'Inter'

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
           <img src="media/merge.svg">
         </div>
 
-        <h3>Align perspectives</h3>
-        <p>Talking past each other kills progress. Use the Product Field with your team and stakeholders to help everyone speak the same language, build shared understanding, and regularly align their goals and motivations.</p>
+        <h3>Align perspectives (font-feature: cv11)</h3>
+        <p style="font-feature-settings: 'cv11';">Talking past each other kills progress. Use the Product Field with your team and stakeholders to help everyone speak the same language, build shared understanding, and regularly align their goals and motivations.</p>
       </div>
       <div class="column">
 
