--- a/index.html
+++ b/index.html
@@ -384,27 +384,6 @@
       <img src="media/dummy_logo-300x36-px.png" alt="The Value Cube">
     </div>
     <div class="block-pf-footer__nav">
-      <ul class="block-pf-footer__nav__social">
-
-        <li>
-          <i class="fab fa-slack"></i>
-          <!-- TODO -->
-          <a href="" title="Go to Join us on Slack">Join us on Slack</a>
-        </li>
-
-        <li>
-          <i class="fab fa-twitter"></i>
-          <!-- TODO -->
-          <a href="" title="Go to Follow us on Twitter">Follow us on Twitter</a>
-        </li>
-
-        <li>
-          <i class="fas fa-envelope"></i>
-          <!-- TODO -->
-          <a href="" title="Go to Subscribe to our List">Subscribe to our List</a>
-        </li>
-
-      </ul>
       <div class="block-pf-footer__nav__more">
         <div>
           <div class="block-pf-footer__nav__more__head">Resources</div>
@@ -424,16 +403,18 @@
         </div>
 
         <div>
-          <div class="block-pf-footer__nav__more__head">Support & Training</div>
+          <div class="block-pf-footer__nav__more__head">Feedback / Training</div>
           <ul>
 
+            <!--
             <li class="linklist">
               <a href="" title="">Lorem ipsum</a>
             </li>
+            -->
 
             <li class="linklist">
               <!-- TODO -->
-              <a href="mailto:" title="Go to Register for a training">Feedback</a>
+              <a href="mailto:hello@test.com" title="">Contact</a>
             </li>
 
           </ul>
