--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
         <div class="columns">
           <div class="column media">
-            <img src="media/signpost.svg">
+            <img src="media/clipboard.svg">
           </div>
           <div class="column text">
             <!-- TODO -->
