Remove some steps from scroll animation, change background of one of the block-hero-1 elements

--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
       </div>
     </section>
 
+    <!-- TODO -->
+    <!--
     <section class="block block-hero-1" id="about" style="background-image: url('media/worksheet-bg.jpg')">
+    -->
+    <section class="block block-hero-1" id="about">
       <div class="container">
         <h2>The Value Cube is a visual and conceptual framework that shows how complex business models are built from simple interacting components, and how to leverage them for successful strategies.</h2>
       </div>
@@ -158,138 +162,81 @@
 
       <img src="media/Cube - Modes.png" data-aos-anchor="#step-3" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Core Benefit.png" data-aos-anchor="#step-4" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Differentiation.png" data-aos-anchor="#step-5" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Network Effects.png" data-aos-anchor="#step-6" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Modes.png" data-aos-anchor="#step-7" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Scale.png" data-aos-anchor="#step-8" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Premium.png" data-aos-anchor="#step-9" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Loyalty.png" data-aos-anchor="#step-10" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Cube - Scale.png" data-aos-anchor="#step-7" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
       <img src="media/Cube - Scale Fit.png" data-aos-anchor="#step-11" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Full Cube with Metrics and Actual Capture.png" data-aos-anchor="#step-12" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-13" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/Cube - Dual-Type Premium.png" data-aos-anchor="#step-14" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-
-      <img src="media/dummy_grafik-loyalty-number-of-transactions-per-customer-700x700px.svg" data-aos-anchor="#step-15" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-12" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
       <img src="media/Cube - Full Cube with Metrics and Actual Capture.png" data-aos-anchor="#step-16" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
     </div>
     <div class="pf-animation__texts">
         <div class="pf-animation__text" id="step-1">
           <!--<h2></h2>-->
-          <p>01. The core of a viable business model is simple: You <strong>create</strong> value for customers, for which they pay you.</p>
+          <p>The core of a viable business model is simple: You <strong>create</strong> value for customers, for which they pay you.</p>
         </div>
 
         <div class="pf-animation__text" id="step-2">
           <!--<h2></h2>-->
-          <p>02. By being paid, you <strong>capture</strong> part of the value and turn it into revenue and profit.</p>
+          <p>By being paid, you <strong>capture</strong> part of the value and turn it into revenue and profit.</p>
         </div>
 
         <div class="pf-animation__text" id="step-3">
           <!--<h2></h2>-->
-          <h2>03</h2>
           <!--<p>03. You can create value in three different ways:</p>-->
           <p>You can create value in three different ways:</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-4">
-          <!--<h2></h2>-->
-          <h2>03 a)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p><strong>Core benefit:</strong> the immediate use value of your product.</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-5">
-          <!--<h2></h2>-->
-          <h2>03 b)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p><strong>Differentiation:</strong> how your product differs from other products with the same core benefit.</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-6">
-          <!--<h2></h2>-->
-          <h2>03 c)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p><strong>Network effects:</strong> how your customer benefits from other customers using your product – the more, the better.</p>
+          <ul>
+            <li>
+              <strong>Core benefit:</strong> the immediate use value of your product.
+            </li>
+            <li>
+              <strong>Differentiation:</strong> how your product differs from other products with the same core benefit.
+            </li>
+            <li>
+              <strong>Network effects:</strong> how your customer benefits from other customers using your product – the more, the better.
+            </li>
+          </ul>
         </div>
 
         <div class="pf-animation__text" id="step-7">
           <!--<h2></h2>-->
-          <h2>04</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
           <p>You also capture value in three different ways:</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-8">
-          <!--<h2></h2>-->
-          <h2>04 a)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p><strong>Scale:</strong> you sell the product to as many customers as possible.</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-9">
-          <!--<h2></h2>-->
-          <h2>04 b)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p><strong>Premium:</strong> you sell the product at as high a price as possible.</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-10">
-          <!--<h2></h2>-->
-          <h2>04 c)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p><strong>Loyalty:</strong> you keep customers for as long as possible.</p>
+          <ul>
+            <li>
+              <strong>Scale:</strong> you sell the product to as many customers as possible.
+            </li>
+            <li>
+              <strong>Premium:</strong> you sell the product at as high a price as possible.
+            </li>
+            <li>
+              <strong>Loyalty:</strong> you keep customers for as long as possible.
+            </li>
+          </ul>
         </div>
 
         <div class="pf-animation__text" id="step-11">
           <!--<h2></h2>-->
-          <h2>05</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
           <p>There is an important <strong>relationship</strong> between value creation and capture: You have to create the right kind of value in order to successfully use a certain way of capture.</p>
         </div>
 
         <div class="pf-animation__text" id="step-12">
           <!--<h2></h2>-->
-          <h2>06</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
           <p>Finally, your success in capturing value is being measured with three simple metrics:</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-13">
-          <!--<h2></h2>-->
-          <h2>06 a)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p>For scale, it’s the <strong>number of customers</strong>.</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-14">
-          <!--<h2></h2>-->
-          <h2>06 b)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p>For premium, it’s <strong>revenue per transaction</strong>.</p>
-        </div>
-
-        <div class="pf-animation__text" id="step-15">
-          <!--<h2></h2>-->
-          <h2>06 c)</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
-          <p>For loyalty, it’s the <strong>number of transactions per customer</strong>.</p>
+          <ul>
+            <li>
+              For scale, it’s the <strong>number of customers</strong>.
+            </li>
+            <li>
+              For premium, it’s <strong>revenue per transaction</strong>.
+            </li>
+            <li>
+              For loyalty, it’s the <strong>number of transactions per customer</strong>.
+            </li>
+          </ul>
         </div>
 
         <div class="pf-animation__text" id="step-16">
           <!--<h2></h2>-->
-          <h2>07</h2>
-          <!--<p>03. a) <strong>Core benefit:</strong> the immediate use value of your product.</p>-->
           <p>And there you have it: The <strong>business volume</strong> you can achieve is the product of all three metrics.</p>
         </div>
       </div>
