Change scroll animation, add heading before scroll animation

--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
       </div>
     </section>
 
+    <section class="block block-heading">
+      <div class="container">
+        <h2>This is how the Value Cube helps you understand business models:</h2>
+      </div>
+    </section>
+
 <section class="block pf-animation">
   <div class="container">
     <div class="pf-animation__media">
@@ -164,9 +170,11 @@
 
       <img src="media/Cube - Scale.png" data-aos-anchor="#step-7" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Scale Fit.png" data-aos-anchor="#step-11" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-11" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Cube - Dual-Type Premium.png" data-aos-anchor="#step-12" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/dummy_grafik-loyalty-number-of-transactions-per-customer-700x700px.svg" data-aos-anchor="#step-14" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-12" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-15" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
       <img src="media/Cube - Full Cube with Metrics and Actual Capture.png" data-aos-anchor="#step-16" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
     </div>
@@ -183,7 +191,6 @@
 
         <div class="pf-animation__text" id="step-3">
           <!--<h2></h2>-->
-          <!--<p>03. You can create value in three different ways:</p>-->
           <p>You can create value in three different ways:</p>
           <ul>
             <li>
@@ -214,12 +221,24 @@
           </ul>
         </div>
 
-        <div class="pf-animation__text" id="step-11">
+        <div class="pf-animation__text2 pf-animation__text2_pre" id="step-9">
+          <p>&nbsp;</p>
+        </div>
+
+        <div class="pf-animation__text2 pf-animation__text2_first" id="step-11">
           <!--<h2></h2>-->
           <p>There is an important <strong>relationship</strong> between value creation and capture: You have to create the right kind of value in order to successfully use a certain way of capture.</p>
         </div>
 
-        <div class="pf-animation__text" id="step-12">
+        <div class="pf-animation__text2 pf-animation__text2_second" id="step-12">
+          <p>&nbsp;</p>
+        </div>
+
+        <div class="pf-animation__text2 pf-animation__text2_third" id="step-14">
+          <p>&nbsp;</p>
+        </div>
+
+        <div class="pf-animation__text" id="step-15">
           <!--<h2></h2>-->
           <p>Finally, your success in capturing value is being measured with three simple metrics:</p>
           <ul>
