Change background image of hero block

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 </section>
 
 
-<section class="block block-hero-1" id="resources" style="background-image: url('media/workshop-bg-3.jpg')">
+<section class="block block-hero-1" id="resources" style="background-image: url('media/workshop-bg-3-1.jpg')">
   <div class="container">
     <h2>Use our resources to explore the Value Cube, learn how to use it, and start building better business models:</h2>
   </div>
