--- a/legal.html
+++ b/legal.html
@@ -48,7 +48,7 @@
 
         <p>Amtsgericht Osnabrück, HRB 212351</p>
 
-        <p>Geschäftsführer: Nicolas L. Fromm</p>
+        <p>Geschäftsführung: Nicolas L. Fromm, Michael Pille, Burkhardt Rädel</p>
 
         <p>Telefon: 0800 – 2050 7100*<br />
         Fax: 0800 – 2050 7101*<br />
