--- a/legal.html
+++ b/legal.html
@@ -52,7 +52,7 @@
 
         <p>Telefon: 0800 – 2050 7100*<br />
         Fax: 0800 – 2050 7101*<br />
-        E-Mail: joachim(punkt)dreykluft(at)hhlab.de</p>
+        E-Mail: joachim(punkt)dreykluft(at)hhlab(punkt)de</p>
 
         <p>*gebührenfrei</p>
 
