Change feedback and training section, adjust navigation

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
         </div>
         <nav class="block-pf-navigation--nav">
           <ul>
+            <!--
             <li class="nav-item  menu-item-">
               <a href="#intro" title="Go to Intro">Intro</a>
             </li>
+            -->
 
             <li class="nav-item  menu-item-">
               <a href="#about" title="Go to About">About</a>
@@ -90,17 +92,9 @@
               <a href="#feedback" title="Go to Feedback">Feedback</a>
             </li>
 
-            <!--
             <li class="nav-item  menu-item-">
-              <a href="#practitioners" title="Go to Practitioners">Practitioners</a>
+              <a href="#training" title="Go to Training">Training</a>
             </li>
-            -->
-
-            <!--
-            <li class="nav-item">
-              <a class="button primary small block-pf-navigation--cta" href="">Link</a>
-            </li>
-            -->
           </ul>
         </nav>
       </div>
@@ -304,16 +298,41 @@
   </div>
 </section>
 
-
 <section class="block block-feature-list-1" id="feedback">
   <div class="container">
     <div class="columns">
       <div class="column text">
-        <h2>Feedback or training?</h2>
-        <p>Get in touch with us for training and coaching</p>
+        <h2>Feedback</h2>
+        <p>Get in touch with us if you have any comments, hints or experiences to share</p>
       </div>
       <div class="column media features">
 
+        <div class="columns">
+          <div class="column media">
+            <img src="media/consulting.svg">
+          </div>
+          <div class="column text">
+            <p>Give <br><strong>feedback</strong></p>
+          </div>
+        </div>
+
+        <div class="cta">
+          <a class="button primary inverted" href="mailto:hello@valuecube.org">Get in touch</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="block block-feature-list-1" id="training">
+  <div class="container">
+    <div class="columns">
+      <div class="column text">
+        <h2>Training and coaching</h2>
+        <p>The inventors of the Value Cube (<a href="https://wolfgangwopperer.com/" target="_blank">Wolfgang Wopperer-Beholz</a> and <a href="https://hhlabc.de/" target="_blank">HHLabC</a>) provide training and coaching.</p>
+      </div>
+      <div class="column media features">
 
         <div class="columns">
           <div class="column media">
@@ -324,19 +343,21 @@
           </div>
         </div>
 
-
         <div class="columns">
           <div class="column media">
-            <img src="media/consulting.svg">
+            <img src="media/map.svg">
           </div>
           <div class="column text">
-            <p>or give <br><strong>feedback</strong></p>
+            <p>or get <br><strong>coaching</strong></p>
           </div>
         </div>
 
+        <div class="cta">
+          <a class="button primary inverted" href="mailto:hello@valuecube.org">Contact Wolfgang</a>
+        </div>
 
         <div class="cta">
-          <a class="button primary inverted" href="mailto:hello@test.com">Get in touch</a>
+          <a class="button primary inverted" href="mailto:kontakt@hhlabc.de">Contact HHLabC</a>
         </div>
 
       </div>
