--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 </section>
 
 
-<section class="block block-feature-list-1">
+<section class="block block-feature-list-1" id="resources-links">
   <div class="container">
     <div class="columns">
       <div class="column text">
@@ -311,8 +311,8 @@
           <div class="column media">
             <img src="media/consulting.svg">
           </div>
-          <div class="column text">
-            <p>Give <br><strong>feedback</strong></p>
+          <div class="column text text-small">
+            <p>Give <strong>feedback</strong></p>
           </div>
         </div>
 
@@ -338,8 +338,8 @@
           <div class="column media">
             <img src="media/workshop.svg">
           </div>
-          <div class="column text">
-            <p>Request <br><strong>training</strong>,</p>
+          <div class="column text text-small">
+            <p>Request <strong>training</strong>,</p>
           </div>
         </div>
 
@@ -347,8 +347,8 @@
           <div class="column media">
             <img src="media/map.svg">
           </div>
-          <div class="column text">
-            <p>or get <br><strong>coaching</strong></p>
+          <div class="column text text-small">
+            <p>or get <strong>coaching</strong></p>
           </div>
         </div>
 
