--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     </script>
     -->
 
-    <!-- TODO -->
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="canonical" href="https://stefan-hhlab.github.io/website-test/" />
+    <link rel="apple-touch-icon" sizes="180x180" href="media/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="media/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="media/favicon/favicon-16x16.png" />
+    <link rel="shortcut icon" href="media/favicon/favicon.ico" />
+
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="js/headroom.min.js"></script>
     <script src="js/aos.js"></script>
