Add description to <head>

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <title>The Value Cube</title>
 
     <meta name="author" content="Wolfgang Wopperer-Beholz">
-    <!-- TODO -->
-    <meta name="description" content="">
+    <meta name="description" content="The Value Cube is a visual and conceptual framework that helps ideate, analyse, and evaluate new and existing business models.">
 
     <meta property="og:site_name" content="The Value Cube" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="The Value Cube" />
     <!-- TODO -->
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="The Value Cube is a visual and conceptual framework that helps ideate, analyse, and evaluate new and existing business models." />
     <meta property="og:image" content="media/worksheet-bg-share.jpg" />
     <meta property="og:url" content="https://stefan-hhlab.github.io/website-test/" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="The Value Cube" />
     <!-- TODO -->
-    <meta name="twitter:description" content="" />
+    <meta name="twitter:description" content="The Value Cube is a visual and conceptual framework that helps ideate, analyse, and evaluate new and existing business models." />
     <meta name="twitter:image" content="media/worksheet-bg-share.jpg" />
     <meta name="twitter:url" content="https://stefan-hhlab.github.io/website-test/" />
 
@@ -49,7 +48,7 @@
               "@type": "WebPage",
               "@id": "https://stefan-hhlab.github.io/website-test/"
           },
-          "description": ""
+          "description": "The Value Cube is a visual and conceptual framework that helps ideate, analyse, and evaluate new and existing business models."
       }
     </script>
     -->
