--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
       <div class="container">
         <div class="block-pf-navigation--logo">
           <a href="/">
-            <!-- TODO -->
-            <img src="media/dummy_logo-300x36-px.png" alt="The Value Cube">
+            <img src="media/Logo small.png" alt="Value Cube logo">
           </a>
         </div>
         <nav class="block-pf-navigation--nav">
@@ -106,7 +105,7 @@
       <div class="container">
         <div class="columns">
           <div class="column media">
-            <img src="media/dummy_grafik-1-222x207px.svg">
+            <img src="media/Logo.png">
           </div>
           <div class="column text">
             <h1>Unfold Your Business Model</h1>
@@ -363,7 +362,7 @@
 <section class="block block-pf-footer" id="">
   <div class="block-pf-footer__container">
     <div class="block-pf-footer__logo">
-      <img src="media/dummy_logo-300x36-px.png" alt="The Value Cube">
+      <img src="media/Logo small white.png" alt="Value Cube logo">
     </div>
     <div class="block-pf-footer__nav">
       <div class="block-pf-footer__nav__more">
