Change images of scroll animation

--- a/index.html
+++ b/index.html
@@ -148,23 +148,23 @@
   <div class="container">
     <div class="pf-animation__media">
       <!-- TODO -->
-      <img src="" class="default-image">
+      <img src="media/Value Creation.png" class="default-image">
 
-      <img src="media/Cube - Creation.png" data-aos-anchor="#step-1" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Value Creation.png" data-aos-anchor="#step-1" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Capture and Creation.png" data-aos-anchor="#step-2" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Value Capture.png" data-aos-anchor="#step-2" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Modes.png" data-aos-anchor="#step-3" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Creation Modes.png" data-aos-anchor="#step-3" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Scale.png" data-aos-anchor="#step-7" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Capture Modes.png" data-aos-anchor="#step-7" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-11" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-      <img src="media/Cube - Dual-Type Premium.png" data-aos-anchor="#step-12" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
-      <img src="media/dummy_grafik-loyalty-number-of-transactions-per-customer-700x700px.svg" data-aos-anchor="#step-14" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Creation_Capture Fit – Scale.png" data-aos-anchor="#step-11" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Creation_Capture Fit – Premium.png" data-aos-anchor="#step-12" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Creation_Capture Fit – Loyalty.png" data-aos-anchor="#step-14" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Dual-Type Scale.png" data-aos-anchor="#step-15" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Metrics.png" data-aos-anchor="#step-15" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
 
-      <img src="media/Cube - Full Cube with Metrics and Actual Capture.png" data-aos-anchor="#step-16" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
+      <img src="media/Actual Volume.png" data-aos-anchor="#step-16" data-aos="fade-in" data-aos-offset="0" data-aos-anchor-placement="center-bottom">
     </div>
     <div class="pf-animation__texts">
         <div class="pf-animation__text" id="step-1">
