Change meta tags in index page

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <meta property="og:title" content="The Value Cube" />
     <!-- TODO -->
     <meta property="og:description" content="The Value Cube is a visual and conceptual framework that helps ideate, analyse, and evaluate new and existing business models." />
-    <meta property="og:image" content="media/worksheet-bg-share.jpg" />
-    <meta property="og:url" content="https://stefan-hhlab.github.io/website-test/" />
+    <meta property="og:image" content="media/Logo.png" />
+    <meta property="og:url" content="https://valuecube.org/" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="The Value Cube" />
     <!-- TODO -->
     <meta name="twitter:description" content="The Value Cube is a visual and conceptual framework that helps ideate, analyse, and evaluate new and existing business models." />
-    <meta name="twitter:image" content="media/worksheet-bg-share.jpg" />
-    <meta name="twitter:url" content="https://stefan-hhlab.github.io/website-test/" />
+    <meta name="twitter:image" content="media/Logo.png" />
+    <meta name="twitter:url" content="https://valuecube.org/" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="media/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="media/favicon/favicon-32x32.png" />
