Change email in footer of index page

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
             <li class="linklist">
               <!-- TODO -->
-              <a href="mailto:hello@test.com" title="">Contact</a>
+              <a href="mailto:hello@valuecube.org" title="Get in touch">Contact</a>
             </li>
 
           </ul>
