Change email in footer and change logos on privacy and legal page

--- a/privacy.html
+++ b/privacy.html
@@ -24,8 +24,7 @@
       <div class="container">
         <div class="block-pf-navigation--logo">
           <a href="/">
-            <!-- TODO -->
-            <img src="media/dummy_logo-300x36-px.png" alt="The Value Cube">
+            <img src="media/Logo small.png" alt="Value Cube logo">
           </a>
         </div>
         <nav class="block-pf-navigation--nav">
@@ -177,7 +176,7 @@
 <section class="block block-pf-footer" id="">
   <div class="block-pf-footer__container">
     <div class="block-pf-footer__logo">
-      <img src="media/dummy_logo-300x36-px.png" alt="The Value Cube">
+      <img src="media/Logo small white.png" alt="Value Cube logo">
     </div>
     <div class="block-pf-footer__nav">
       <div class="block-pf-footer__nav__more">
@@ -201,7 +200,7 @@
           <ul>
 
             <li class="linklist">
-              <a href="mailto:hello@test.com" title="">Contact</a>
+              <a href="mailto:hello@valuecube.org" title="Get in touch">Contact</a>
             </li>
 
           </ul>
