--- a/index.html
+++ b/index.html
@@ -381,5 +381,20 @@
   </div>
 </section>
 
+    <span id="fc-36000"></span>
+    <script>
+      var fcr = Math.floor(Math.random()*99999999999);
+      var _fcc = _fcc || []; 
+      _fcc.push(["36000"]); 
+      _fcc.push(["trans"]);
+      (function(){
+        var fc = document.createElement("script");
+        fc.async = true;
+        fc.src = "https://www.fastcounter.de/fcount.php?rnd=" + fcr;
+        var sc = document.getElementById("fc-36000");
+        sc.appendChild(fc);
+      })();
+    </script>
+
   </body>
 </html>
